--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
   "dependencies": {
     "express": "^4.16.4",
     "npm-run-all": "^4.1.5",
-    "superagent": "^5.0.2"
+    "superagent": "^5.0.2",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.3",
@@ -51,8 +53,6 @@
     "nodemon": "^1.19.2",
     "react": "^16.8.6",
     "react-dom": "^16.12.0",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.2.1"
   }
 }
